--- a/styles/scss/partials/_globalStyles.scss
+++ b/styles/scss/partials/_globalStyles.scss
@@ -1,7 +1,7 @@
 /* General Default Styles */
 html {
 	font-size: 10px;
-	background-color: #f7f7f9;
+	background-color: $lightBackgroundColor;
 	text-align: center;
 	font-family: 'norwester', sans-serif;
 }
