--- a/styles/scss/partials/_main.scss
+++ b/styles/scss/partials/_main.scss
@@ -5,7 +5,7 @@ header {
 
 .banner {
 	background-image: url('../../assets/WE_banner.png');
-	background-size: contain;
+	// background-size: contain;
 	background-repeat: no-repeat;
 	height: 50vh;
 	width: 100%;
