--- a/styles/scss/partials/_variablesMixins.scss
+++ b/styles/scss/partials/_variablesMixins.scss
@@ -1,9 +1,6 @@
 // Variables
-$primaryFont: #2d2d2f;
-$secondaryFont: #eee;
-$accentColor: #008080;
-$secondaryAccentColor: rgb(210, 218, 226);
-$secondaryAccentOpacity: rgba(210, 218, 226, 0.8);
+$lightBackgroundColor: #f7f7f9;
+// $darkBackgroundColor: ;
 
 $waifuEnginePink: rgb(218, 114, 146);
 $waifuEngineBlue: rgb(113, 222, 188);
